jamvas-infrastructure/k8s/jamvas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jamvas-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: jamvas.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jamvas-frontend-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: jamvas-backend-service
                port:
                  number: 80
